versions/v2.9/modules/en/pages/rancher-admin/global-configuration/rke1-templates/creator-permissions.adoc
= Template Creator Permissions
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-rke1-templates/creator-permissions.adoc 
:product-path: rancher-admin/global-configuration/rke1-templates/creator-permissions.adoc
ifeval::["{build-type}" != "community"]
:xref-global-permissions: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
:xref-access-share-rke1-templates: xref:rancher-admin/global-configuration/rke1-templates/access-or-share-templates.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-global-permissions: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/global-permissions.adoc 
:xref-access-share-rke1-templates: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-rke1-templates/access-or-share-templates.adoc
endif::[]

Administrators have the permission to create RKE templates, and only administrators can give that permission to other users.

For more information on administrator permissions, refer to the {xref-global-permissions}[documentation on global permissions].

== Giving Users Permission to Create Templates

Templates can only be created by users who have the global permission *Create RKE Templates*.

Administrators have the global permission to create templates, and only administrators can give that permission to other users.

For information on allowing users to modify existing templates, refer to {xref-access-share-rke1-templates}[Sharing Templates.]

Administrators can give users permission to create RKE templates in two ways:

* By editing the permissions of an <<_allowing_a_user_to_create_templates,individual user>>
* By changing the <<_allowing_new_users_to_create_templates_by_default,default permissions of new users>>

=== Allowing a User to Create Templates

An administrator can individually grant the role *Create RKE Templates* to any existing user by following these steps:

. In the upper left corner, click *☰ > Users & Authentication*.
. In the left navigation bar, click *Users*.
. Choose the user you want to edit and click *⋮ > Edit Config*.
. In the *Built-in* section, check the box for *Create new RKE Cluster Templates* role along with any other roles the user should have. You may want to also check the box for *Create RKE Template Revisions*.
. Click *Save*.

*Result:* The user has permission to create RKE templates.

=== Allowing New Users to Create Templates by Default

Alternatively, the administrator can give all new users the default permission to create RKE templates by following the following steps. This will not affect the permissions of existing users.

. In the upper left corner, click *☰ > Users & Authentication*.
. In the left navigation bar, click *Role Templates*.
. Select *Create new RKE Cluster Templates* and click *⋮ > Edit Config*.
. Select the option *Yes: Default role for new users*.
. Click *Save*.
. If you would like new users to also be able to create RKE template revisions, enable that role as default as well.

*Result:* Any new user created in this Rancher installation will be able to create RKE templates. Existing users will not get this permission.

=== Revoking Permission to Create Templates

Administrators can remove a user's permission to create templates with the following steps. Note: Administrators have full control over all resources regardless of whether fine-grained permissions are selected.

. In the upper left corner, click *☰ > Users & Authentication*.
. In the left navigation bar, click *Users*.
. Choose the user you want to edit permissions for and click *⋮ > Edit Config*.
. In the *Built-in* section, un-check the box for *Create RKE Templates* and *Create RKE Template Revisions,* if applicable. In this section, you can change the user back to a standard user, or give the user a different set of permissions.
. Click *Save*.

*Result:* The user cannot create RKE templates.
